fix: fixed layout issue for image in read only page in large screens

--- a/src/pages/Dashboard/PlaceReadOnly/placeReadOnly.css
+++ b/src/pages/Dashboard/PlaceReadOnly/placeReadOnly.css
@@ -21,6 +21,12 @@
   padding: 0 16px !important;
 }
 
+@media only screen and (min-width: 900px) {
+  .place-read-only .place-read-only-image-section .responsive-view-control-class {
+    flex: 0 !important;
+  }
+}
+
 @media only screen and (max-width: 480px) {
   .place-read-only .read-only-event-heading h4 {
     font-size: 24px;
